--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,13 +37,14 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 2px;
+  
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: black;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -53,6 +54,9 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+div{
+  margin-bottom: 10px;
 }
 
 @media (prefers-color-scheme: light) {
