--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,8 +56,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 div{
+  justify-content:space-between;
   margin-bottom: 10px;
 }
+
 
 @media (prefers-color-scheme: light) {
   :root {
