--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,11 +15,10 @@ html, body, #root, .wrapper {
 #logincontainer{
   margin:auto;
   min-height:100vh;
-  background-color:blue;
   display:flex;
   flex-direction:column;
   justify-content: center;
-  background-image: url('/home/omkar/Scientific-Paper-Rater/frontend/src/assets/bg-img2.jpg');
+  background-image: url('assets/bg-img2.jpg');
   
 }
 #loginwrapper{
