--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,6 +27,7 @@ html, body, #root, .wrapper {
   display:flex;
   background-image: url('assets/bg-img2.jpg');
   flex-direction:column;
+  justify-content: flex-start;
 
 }
 #container2{
